# pastewisp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/: pastewisp.desktop  pastewisp.service.in
scripts/: _seed_demo.py  build_deb.sh  capture_screenshots.sh  install.sh  record_demo.sh  smoke_watcher.py  uninstall.sh
src/pastewisp/: __init__.py  app.py  config.py  cursor.py  db.py  history.py  i18n.py  paths.py  positioning.py  tray_proc.py  watcher.py
src/pastewisp/active_window/: __init__.py  base.py  x11.py
src/pastewisp/hotkey/: __init__.py  base.py  x11.py
src/pastewisp/paster/: __init__.py  base.py  x11.py
src/pastewisp/ui/: popup.py  preferences.py  tray.py
tests/: test_config.py  test_db.py  test_history.py  test_hotkey_parse.py  test_i18n.py
